Dimensions incorrect after undoing change to an object's dimension if it has a Mirror modifier #83422

Closed
opened 2020-12-05 08:27:37 +01:00 by George Coffey · 7 comments

version: 2.92.0 Alpha, branch: master, commit date: 2020-12-04 20:46, hash: ea37e4ea5a, type: Release
build date: 2020-12-05, 00:06:39
platform: Linux

Blender Version
Not working in 2.91 & tested not working in 2.92.0
Legacy undo handles this properly.

problem.blend

Short description of error
If you change the dimensions of an object with a mirror modifier using the transform box, then undo that change, the dimensions will display incorrectly and if you will be unable to change them correctly again.

Exact steps for others to reproduce the error
1 - Enter edit mode and edit the default cube to move one face to 0 degrees (for example move the top face from 0,0,1 to 0,0,0)
2 - Add a mirror modifier to the cube, mirroring the axis of the face you moved (in this example, select z). The cube should now appear it's original 2x2x2 size.
3 - In Object mode, use the sidebar "Item" tab to enter 1 in the "Dimensions" value for the axis with the mirror modifier. (in our case z) The cube should change size.
4 - Undo the change using Ctrl-Z or Edit-Undo

The "Dimensions" section will still show the 1 that you entered. If you try to enter "2" to get it correct again, it will act like you entered "4" as it seems to apply that number to the object before the mirror.

Further, if you have multiple axes setup like this (as in the attached example file), when udoing all the axes will change to 1, even if you only edited 1 of them.

Switching in and out of Edit mode on the object will reset the dimensions so they show correctly.

version: 2.92.0 Alpha, branch: master, commit date: 2020-12-04 20:46, hash: ea37e4ea5a71, type: Release build date: 2020-12-05, 00:06:39 platform: Linux **Blender Version** Not working in 2.91 & tested not working in 2.92.0 Legacy undo handles this properly. [problem.blend](https://archive.blender.org/developer/F9478084/problem.blend) **Short description of error** If you change the dimensions of an object with a mirror modifier using the transform box, then undo that change, the dimensions will display incorrectly and if you will be unable to change them correctly again. **Exact steps for others to reproduce the error** 1 - Enter edit mode and edit the default cube to move one face to 0 degrees (for example move the top face from 0,0,1 to 0,0,0) 2 - Add a mirror modifier to the cube, mirroring the axis of the face you moved (in this example, select z). The cube should now appear it's original 2x2x2 size. 3 - In Object mode, use the sidebar "Item" tab to enter 1 in the "Dimensions" value for the axis with the mirror modifier. (in our case z) The cube should change size. 4 - Undo the change using Ctrl-Z or Edit-Undo The "Dimensions" section will still show the 1 that you entered. If you try to enter "2" to get it correct again, it will act like you entered "4" as it seems to apply that number to the object before the mirror. Further, if you have multiple axes setup like this (as in the attached example file), when udoing all the axes will change to 1, even if you only edited 1 of them. Switching in and out of Edit mode on the object will reset the dimensions so they show correctly.
Author

Added subscriber: @GeorgeCoffey

Added subscriber: @GeorgeCoffey
Author

I noticed if you tab into edit mode and back out the editing and undo will work, but if you click off the object and re-select it the problem comes back.

I noticed if you tab into edit mode and back out the editing and undo will work, but if you click off the object and re-select it the problem comes back.

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this issue. This doesn't happen with the legacy undo.

I can confirm this issue. This doesn't happen with the legacy undo.

This issue was referenced by 2a8b987e9e

This issue was referenced by 2a8b987e9e4dacd788ce955966d28c04ed91caf3
Bastien Montagne self-assigned this 2020-12-08 18:06:07 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83422
No description provided.